--- a/pblisbon/package.json
+++ b/pblisbon/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
