--- a/pblisbon/package.json
+++ b/pblisbon/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "sass": "^1.77.5",
     "split-type": "^0.3.4"
