--- a/pblisbon/package.json
+++ b/pblisbon/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@material-tailwind/react": "^2.1.9",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.5",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
