--- a/pblisbon/package.json
+++ b/pblisbon/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --turbo",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18",
@@ -24,6 +25,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.5",
+    "server-only": "^0.0.1",
     "split-type": "^0.3.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
