--- a/pblisbon/tsconfig.json
+++ b/pblisbon/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/According/according.jsx", "src/app/components/acording/acording.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/components/According/according.jsx", "src/app/components/acording/acording.jsx", "src/app/components/carousel/carousel.jsx"],
   "exclude": ["node_modules"]
 }
