--- a/pblisbon/package.json
+++ b/pblisbon/package.json
@@ -12,10 +12,11 @@
     "@gsap/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@tabler/icons-react": "^3.11.0",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
     "lucide-react": "^0.395.0",
@@ -27,7 +28,7 @@
     "sass": "^1.77.5",
     "server-only": "^0.0.1",
     "split-type": "^0.3.4",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
